fix buttons shrinking on smaller screens

--- a/style.css
+++ b/style.css
@@ -176,7 +176,13 @@ main {
 
 .btns button {
     font-size: 1.05rem;
-    flex: 1 1 max-content;
+    flex: 1;
+}
+
+@media(max-width: 360px) {
+    .btns button {
+        flex: auto;
+    }
 }
 
 .btns :first-child {
